--- a/scripts/tables/s_table_1_ESBL_plasmidic_location.Rmd
+++ b/scripts/tables/s_table_1_ESBL_plasmidic_location.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "s_table_1_plasmidic_location"
+title: "Supplemental Table 1: Location of ESBL genes on short-read assemblies"
 author: "Kyle Gontjes"
 date: "`r Sys.Date()`"
 output: html_document
@@ -13,12 +13,16 @@ opts_knit$set(root.dir='~/Desktop/gl_merlin/Analysis/Household_transmission/MERL
 ```
 
 # Environment
-```{r environment, echo=F, message=FALSE, include=F, results=F}
+
+```{r environment, echo=T, message=FALSE, include=T, results=T}
 #Packages
 packages <- c("tidyverse",'kableExtra') 
 
 #Load Packages
 invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Functions
+source("./lib/consistent_themes.R")
 
 # Print environment
 set.seed(45) 
@@ -53,11 +57,10 @@ analyze_frequency_on_plasmid <- function(ESBL,plasmid_data){
 ESBL_prop_data <- lapply(ESBL_genes,analyze_frequency_on_plasmid,plasmid_data) %>% do.call(rbind,.) %>% arrange(prop_plasmid,n_plasmid)
 colnames(ESBL_prop_data) <- c("ESBL","No. chromosomal","No. plasmidic","Proportion plasmidic")
 
-ESBL_prop_data %>% gontjesr::favorite_kable() 
+ESBL_prop_data %>% favorite_kable() 
 ```
 
 ```{r}
 saveRDS(ESBL_prop_data,"./tables/s_table_1_ESBL_proportion_plasmidic.RDS")
 write_csv(ESBL_prop_data,"./tables/s_table_1_ESBL_proportion_plasmidic.csv")
 ```
-
