--- a/scripts/dataset_curation/MERLIN_add_qc_to_deduplicated_metadata.Rmd
+++ b/scripts/dataset_curation/MERLIN_add_qc_to_deduplicated_metadata.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MERLIN_merge_metadata_w_qcd"
+title: "Data Cleaning Step 5- Add QCD data to de-duplicated metadata"
 author: "Kyle Gontjes"
 date: "`r Sys.Date()`"
 output: html_document
@@ -11,8 +11,21 @@ knitr::opts_chunk$set(echo = TRUE)
 opts_knit$set(root.dir='~/Desktop/gl_merlin/Analysis/Household_transmission/')
 ```
 
+# Environment
+```{r environment, echo=T, message=FALSE, include=T, results=T}
+#Packages
+packages <- c("tidyverse")   
+#Load Packages
+invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Print environment
+set.seed(45) 
+Sys.info()
+sessionInfo()
+```
+
+# Load data
 ```{r}
-library(tidyverse)
 metadata <- readRDS("./MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed.RDS") 
 qcd <- readRDS("./MERLIN-prolonged-colonization-ms/data/QCD/master_qc_all.RDS")
 ```
@@ -47,11 +60,11 @@ metadata <- left_join(metadata, qcd_results)
 metadata$household <- ifelse(grepl("MER",metadata$household_number_recode), metadata$isolate_id,metadata$household_number_recode) %>% gsub("h","H",.)
 metadata$ST <- ifelse(metadata$ST =="-","Unknown",metadata$ST) 
 metadata$Species_ST <- paste0(metadata$Species," ST ",metadata$ST) %>% trimws(.,"both")
-metadata$specimen <- ifelse(grepl("MER",metadata$household_number_recode),"Stool 1A",metadata$isolate_id)%>% gsub("C1|C2|C3","",.)  %>% trimws(.,"both")  %>% gsub("\\)|pink|00784|01240|01238|00794|00792|\\(","",.) %>% trimws(.,"both")  %>% gsub("Petnape","Pet Nape",.)%>% trimws(.,"both") %>% gsub("Petstool","Pet Stool",.) %>% trimws(.,"both")
+metadata$specimen <- ifelse(grepl("MER",metadata$household_number_recode),"Stool 1A",metadata$isolate_id)%>% gsub("C1|C2|C3","",.)  %>% trimws(.,"both")  %>% gsub("\\)|pink|00784|01240|01238|00794|00792|\\(","",.) %>% trimws(.,"both")  %>% gsub("Petnape","Pet Nape",.) %>% trimws(.,"both") %>% gsub("Petstool","Pet Stool",.) %>% trimws(.,"both")
 
-metadata$specimen_category <- ifelse(metadata$specimen %in% c("Bath 1","Kitchen","Living Room","Washing Machine"),"Environmnent",
+metadata$specimen_category <- ifelse(metadata$specimen %in% c("Bath 1","Bath 2","Kitchen","Living Room","Washing Machine"),"Environmnent",
                                            ifelse(metadata$specimen %in% c("Pet Nape 1A","Pet Nape 2A","Pet Nape 3A","Pet Stool 1A","Pet Stool 2A"),"Pet",
-                                                  ifelse(metadata$specimen %in% c("Stool 1A","Stool 2A","Stool 3A"),"Human","Unk")))
+                                                  ifelse(metadata$specimen %in% c("Stool 1A","Stool 2A","Stool 3A"),"Human","Unknown")))
 
 metadata$individual_id <- paste0(metadata$household,"_",metadata$specimen)
 metadata$index <-  grepl('hi',metadata$location_or_participant) | grepl("MER",metadata$household_number_recode)
@@ -60,7 +73,7 @@ metadata$isolate_name <- paste0(metadata$household,"_",metadata$visit,"_",metada
 
 
 ```{r}
-metadata_clean <- metadata %>% select(-row,-column,-no_correct_platemap,-WGS_qc_pass_runs_num,-WGS_qc_pass_ids_num)
+metadata_clean <- metadata %>% select(-no_correct_platemap,-WGS_qc_pass_runs_num,-WGS_qc_pass_ids_num)
 colnames(metadata_clean) <- gsub("\\.|\\.\\.\\.","_",colnames(metadata_clean))
 
 saveRDS(metadata_clean,'./MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS')
