--- a/scripts/results_sections/results_section_4_diagnostic_stats_of_species_level_prolonged_colonization.Rmd
+++ b/scripts/results_sections/results_section_4_diagnostic_stats_of_species_level_prolonged_colonization.Rmd
@@ -6,7 +6,6 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-
 ```{r setup, include=FALSE}
 require(knitr)
 opts_knit$set(echo = F,warning = FALSE, message = FALSE,error=F,comment=NA) 
@@ -14,4 +13,4 @@ opts_chunk$set(echo = F,warning = FALSE, message = FALSE,error=F,comment=NA)
 opts_knit$set(root.dir='~/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/')
 ```
 
-# For statistics, see figure 3!
+# For statistics, see figure 3!!
