--- a/scripts/dataset_curation/curate_final_metadata_index_qc_passing.Rmd
+++ b/scripts/dataset_curation/curate_final_metadata_index_qc_passing.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Cleaning Step 7- Curate final metadataset of specimens from index subjects"
+title: "Data Cleaning Step 7 - Curate final metadataset of specimens from index subjects"
 author: "Kyle Gontjes"
 date: "`r Sys.Date()`"
 output: html_document
@@ -27,6 +27,8 @@ set.seed(45)
 Sys.info()
 sessionInfo()
 ```
+
+# Update - changed from 30 to 25 SNP threshold
 
 ```{r}  
 df <- readRDS("/Users/kgontjes/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS")
