--- a/scripts/figures/figure_2_prolonged_colonization.Rmd
+++ b/scripts/figures/figure_2_prolonged_colonization.Rmd
@@ -31,11 +31,12 @@ Sys.info()
 sessionInfo()
 ```
 
-# Load data
+# Data
 ```{r } 
 prolonged_colonization_df <- readRDS("./data/prolonged_colonization/MERLIN_prolonged_colonization_index_patients.RDS")
 ```
 
+# Generate frequency plot
 ```{r}
 prolonged_melt <- reshape2::melt(prolonged_colonization_df %>% select(household,index_at_1_and_or_2_WGS_escre,index_at_1_and_or_2_Species,index_at_1_and_or_2_Species_ST,index_at_1_and_or_2_Species_ST_cluster,index_at_1_and_or_2_ESBL_genes,index_at_1_and_or_2_ESBL_plasmidic_genes,index_at_1_and_or_2_ESBL_plasmids,index_at_1_and_or_2_Species_ST_cluster_ESBL_genes,index_at_1_and_or_2_Species_ST_cluster_ESBL_plasmidic_genes,index_at_1_and_or_2_Species_ST_cluster_ESBL_plasmids),id.vars="household")
 prolonged_melt$value <- factor(prolonged_melt$value,levels = c(0,1))
@@ -47,16 +48,12 @@ prolonged_melt$variable <- recode(prolonged_melt$variable,'index_at_1_and_or_2_W
 prolonged_melt %>% mutate(value = (value ==1)) %>% group_by(variable) %>% summarise(n=sum(value),prop=n/length(value)) %>% favorite_kable()
 ```
 
-```{r,fig.width=7.5,fig.height=9.375}
-figure_2 <- ggplot(data=prolonged_melt) + geom_bar(aes(x=variable,fill=value)) + xlab("") + ylab("Count") + prolonged_colonization_scale + theme_bw_me + figure_2_format
+```{r,fig.width=6.5,fig.height=8.125}
+figure_2 <- ggplot(data=prolonged_melt) + geom_bar(aes(x=variable,fill=value)) + xlab("") + ylab("Count") + prolonged_colonization_scale + theme_bw_me + figure_2_format 
 
 figure_2
 ```
 
 ```{r}
-ggsave(plot = figure_2,filename = './figures/figure_2_prolonged_colonization.png',dpi = 600,width = 7.5,height = 9.375)
+ggsave(plot = figure_2,filename = './figures/figure_2_prolonged_colonization.png', dpi = 900, width = 6.5, height = 8.125)
 ```
-
-
-
-
